Tutorials/OldQuiz/Tutorial/02 Syntax Analysis/Tutorial 2/target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'return'", "'{'", "'}'", "';'", 
                     "','", "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "WS", "INTLIT", "FLOATLIT", "INT", "FLOAT", 
                      "RETURN", "LB", "RB", "SM", "CM", "EQ", "LP", "RP", 
                      "ADD", "SUB", "MUL", "DIV", "ID", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_variable_list = 1
    RULE_parameters_list = 2
    RULE_declaration_variables = 3
    RULE_declaration_parameters = 4
    RULE_declaration_function = 5
    RULE_body = 6
    RULE_compound = 7
    RULE_statement = 8
    RULE_statement_assignment = 9
    RULE_expression_list = 10
    RULE_expression_call = 11
    RULE_statement_call = 12
    RULE_statement_return = 13
    RULE_expression = 14
    RULE_expression_3 = 15
    RULE_expression_4 = 16
    RULE_expression_5 = 17
    RULE_operand = 18
    RULE_types = 19

    ruleNames =  [ "program", "variable_list", "parameters_list", "declaration_variables", 
                   "declaration_parameters", "declaration_function", "body", 
                   "compound", "statement", "statement_assignment", "expression_list", 
                   "expression_call", "statement_call", "statement_return", 
                   "expression", "expression_3", "expression_4", "expression_5", 
                   "operand", "types" ]

    EOF = Token.EOF
    WS=1
    INTLIT=2
    FLOATLIT=3
    INT=4
    FLOAT=5
    RETURN=6
    LB=7
    RB=8
    SM=9
    CM=10
    EQ=11
    LP=12
    RP=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    ID=18
    ERROR_CHAR=19
    UNCLOSE_STRING=20
    ILLEGAL_ESCAPE=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_variables(self):
            return self.getTypedRuleContext(MPParser.Declaration_variablesContext,0)


        def declaration_function(self):
            return self.getTypedRuleContext(MPParser.Declaration_functionContext,0)


        def program(self):
            return self.getTypedRuleContext(MPParser.ProgramContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)



    def program(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ProgramContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_program, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 41
                self.declaration_variables()
                pass

            elif la_ == 2:
                self.state = 42
                self.declaration_function()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 51
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 49
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.ProgramContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_program)
                        self.state = 45
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 46
                        self.declaration_variables()
                        pass

                    elif la_ == 2:
                        localctx = MPParser.ProgramContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_program)
                        self.state = 47
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 48
                        self.declaration_function()
                        pass

             
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def variable_list(self):
            return self.getTypedRuleContext(MPParser.Variable_listContext,0)


        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_variable_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)



    def variable_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Variable_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_variable_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(MPParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Variable_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_variable_list)
                    self.state = 57
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 58
                    self.match(MPParser.CM)
                    self.state = 59
                    self.match(MPParser.ID) 
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Parameters_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def variable_list(self):
            return self.getTypedRuleContext(MPParser.Variable_listContext,0)


        def parameters_list(self):
            return self.getTypedRuleContext(MPParser.Parameters_listContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_parameters_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters_list" ):
                return visitor.visitParameters_list(self)
            else:
                return visitor.visitChildren(self)



    def parameters_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Parameters_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_parameters_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.types()
            self.state = 67
            self.variable_list(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Parameters_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_parameters_list)
                    self.state = 69
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 70
                    self.match(MPParser.SM)
                    self.state = 71
                    self.types()
                    self.state = 72
                    self.variable_list(0) 
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Declaration_variablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def variable_list(self):
            return self.getTypedRuleContext(MPParser.Variable_listContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_declaration_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_variables" ):
                return visitor.visitDeclaration_variables(self)
            else:
                return visitor.visitChildren(self)




    def declaration_variables(self):

        localctx = MPParser.Declaration_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration_variables)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.types()
            self.state = 80
            self.variable_list(0)
            self.state = 81
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaration_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def parameters_list(self):
            return self.getTypedRuleContext(MPParser.Parameters_listContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_declaration_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_parameters" ):
                return visitor.visitDeclaration_parameters(self)
            else:
                return visitor.visitChildren(self)




    def declaration_parameters(self):

        localctx = MPParser.Declaration_parametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration_parameters)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(MPParser.LP)
                self.state = 84
                self.parameters_list(0)
                self.state = 85
                self.match(MPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(MPParser.LP)
                self.state = 88
                self.match(MPParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaration_functionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def declaration_parameters(self):
            return self.getTypedRuleContext(MPParser.Declaration_parametersContext,0)


        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_function" ):
                return visitor.visitDeclaration_function(self)
            else:
                return visitor.visitChildren(self)




    def declaration_function(self):

        localctx = MPParser.Declaration_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaration_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.types()
            self.state = 92
            self.match(MPParser.ID)
            self.state = 93
            self.declaration_parameters()
            self.state = 94
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def compound(self):
            return self.getTypedRuleContext(MPParser.CompoundContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MPParser.LB)

            self.state = 97
            self.compound(0)
            self.state = 98
            self.match(MPParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MPParser.StatementContext,0)


        def declaration_variables(self):
            return self.getTypedRuleContext(MPParser.Declaration_variablesContext,0)


        def compound(self):
            return self.getTypedRuleContext(MPParser.CompoundContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compound

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound" ):
                return visitor.visitCompound(self)
            else:
                return visitor.visitChildren(self)



    def compound(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.CompoundContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_compound, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 101
                self.statement()
                pass

            elif la_ == 2:
                self.state = 102
                self.declaration_variables()
                pass

            elif la_ == 3:
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 110
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.CompoundContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_compound)
                        self.state = 106
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 107
                        self.declaration_variables()
                        pass

                    elif la_ == 2:
                        localctx = MPParser.CompoundContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_compound)
                        self.state = 108
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 109
                        self.statement()
                        pass

             
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_assignment(self):
            return self.getTypedRuleContext(MPParser.Statement_assignmentContext,0)


        def statement_call(self):
            return self.getTypedRuleContext(MPParser.Statement_callContext,0)


        def statement_return(self):
            return self.getTypedRuleContext(MPParser.Statement_returnContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.statement_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.statement_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.statement_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_assignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_statement_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_assignment" ):
                return visitor.visitStatement_assignment(self)
            else:
                return visitor.visitChildren(self)




    def statement_assignment(self):

        localctx = MPParser.Statement_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MPParser.ID)
            self.state = 121
            self.match(MPParser.EQ)
            self.state = 122
            self.expression()
            self.state = 123
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def expression_list(self):
            return self.getTypedRuleContext(MPParser.Expression_listContext,0)


        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expression_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)



    def expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression_list)
                    self.state = 128
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 129
                    self.match(MPParser.CM)
                    self.state = 130
                    self.expression() 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Expression_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MPParser.Expression_listContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expression_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_call" ):
                return visitor.visitExpression_call(self)
            else:
                return visitor.visitChildren(self)




    def expression_call(self):

        localctx = MPParser.Expression_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression_call)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MPParser.ID)
                self.state = 137
                self.match(MPParser.LP)
                self.state = 138
                self.expression_list(0)
                self.state = 139
                self.match(MPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(MPParser.ID)
                self.state = 142
                self.match(MPParser.LP)
                self.state = 143
                self.match(MPParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_call(self):
            return self.getTypedRuleContext(MPParser.Expression_callContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_statement_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_call" ):
                return visitor.visitStatement_call(self)
            else:
                return visitor.visitChildren(self)




    def statement_call(self):

        localctx = MPParser.Statement_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.expression_call()
            self.state = 147
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_statement_return

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_return" ):
                return visitor.visitStatement_return(self)
            else:
                return visitor.visitChildren(self)




    def statement_return(self):

        localctx = MPParser.Statement_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MPParser.RETURN)
            self.state = 150
            self.expression()
            self.state = 151
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_3(self):
            return self.getTypedRuleContext(MPParser.Expression_3Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def expression(self):
            return self.getTypedRuleContext(MPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = MPParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.expression_3()
                self.state = 154
                self.match(MPParser.ADD)
                self.state = 155
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.expression_3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_4(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Expression_4Context)
            else:
                return self.getTypedRuleContext(MPParser.Expression_4Context,i)


        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expression_3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_3" ):
                return visitor.visitExpression_3(self)
            else:
                return visitor.visitChildren(self)




    def expression_3(self):

        localctx = MPParser.Expression_3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression_3)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.expression_4(0)
                self.state = 161
                self.match(MPParser.SUB)
                self.state = 162
                self.expression_4(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.expression_4(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_5(self):
            return self.getTypedRuleContext(MPParser.Expression_5Context,0)


        def expression_4(self):
            return self.getTypedRuleContext(MPParser.Expression_4Context,0)


        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expression_4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_4" ):
                return visitor.visitExpression_4(self)
            else:
                return visitor.visitChildren(self)



    def expression_4(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Expression_4Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 32
        self.enterRecursionRule(localctx, 32, self.RULE_expression_4, _p)
